--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://JunYeong-dev.github.io/react-movie-app/"
 }
