--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://JunYeong-dev.github.io/react-movie-app/"
+  "homepage": "https://junyeong-kim-dev.github.io/react-movie-app/"
 }
