--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://junyeong-kim-dev.github.io/react-movie-app/"
+  "homepage": "https://junyeong-dev.github.io/react-movie-app/"
 }
